--- a/.gitignore
+++ b/.gitignore
@@ -106,4 +106,6 @@ venv.bak/
 # Temp Files
 softwares.pi
 response.html
-./src/response.html
+/src/response.html
+GoodScanResults.txt
+ScanResult.txt
